[package]
name = "raytracer"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
version.workspace = true

[dependencies]
image = "0.24.5"
indicatif = "0.17.2"
rand = "0.8.5"
rayon = "1.6.1"
serde = { version = "1.0.152", features = ["derive"] }
thiserror = "1.0.38"

[dev-dependencies]
serde_test = "1.0.152"
